Compiler/test_inputs/invalid/13_named_argument.mt
@triton.jit
def kwarg(x): {
  y = tl.load(mask = 1);
}
